# aria-api

./: .dockerignore  .env.dev-template  .envrc  .gitignore  Dockerfile  Procfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  schema.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  ci.yml  deploy.yaml
aria/: __init__.py  api.py  asgi.py  celery.py  conftest.py  heroku_settings.py  settings.py  test_utils.py  urls.py  wsgi.py
aria/api/: api.py  apps.py  base.py  decorators.py  endpoints.py  exception_handlers.py  exceptions.py  fields.py  pagination.py  parsers.py  renderers.py  responses.py  utils.py
aria/api_auth/: admin.py  apps.py  authentication.py  decorators.py  exceptions.py  models.py  records.py  schemas.py  selectors.py  services.py  utils.py
aria/audit_logs/: admin.py  apps.py  managers.py  models.py  records.py  selectors.py  serializers.py  services.py  types.py
aria/auth/: apps.py  urls.py  viewsets.py
aria/categories/: admin.py  apps.py  enums.py  managers.py  models.py  records.py  selectors.py  signals.py  urls.py  utils.py
aria/communications/: apps.py  backends.py
aria/core/: apps.py  authentication.py  cache_utils.py  decorators.py  deprecated_schemas.py  exceptions.py  fields.py  humps.py  managers.py  middleware.py  models.py  pagination.py  permissions.py  records.py  schemas.py  selectors.py  serializers.py  services.py  storage.py  test_utils.py  thumbor.py  urls.py  utils.py  validators.py  viewsets.py
aria/discounts/: admin.py  apps.py  managers.py  models.py  records.py  selectors.py
aria/employees/: admin.py  apps.py  managers.py  models.py  records.py  selectors.py
aria/files/: apps.py  models.py  records.py  s3_utils.py  storage.py  thumbor.py  types.py  utils.py  validators.py
aria/forms/: apps.py  constants.py  enums.py  helpers.py  records.py  schemas.py  utils.py
aria/front/: admin.py  apps.py  enums.py  managers.py  models.py  records.py  selectors.py  types.py
aria/kitchens/: admin.py  apps.py  managers.py  models.py  records.py  selectors.py  serializers.py  signals.py  urls.py  viewsets.py
aria/notes/: admin.py  apps.py  managers.py  models.py  records.py  selectors.py  serializers.py  services.py  urls.py  viewsets.py
aria/product_attributes/: admin.py  apps.py  managers.py  models.py  records.py  selectors.py  services.py  signals.py  utils.py
aria/product_categorization/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
aria/products/: __init__.py  admin.py  apps.py  enums.py  filters.py  managers.py  models.py  records.py  selectors.py  serializers.py  services.py  signals.py  types.py  urls.py  views.py  viewsets.py
aria/suppliers/: admin.py  apps.py  managers.py  models.py  records.py  urls.py
aria/users/: admin.py  apps.py  enums.py  filters.py  forms.py  managers.py  models.py  records.py  schemas.py  selectors.py  serializers.py  services.py  tests.py  urls.py  viewsets.py
audit_logs/: admin.py  models.py  serializers.py
backend/: heroku.py  heroku_settings.py  settings.py  urls.py  wsgi.py
backend/settings/: base.py  heroku.py  settings.py
core/: auth_backend.py  authentication.py  fields.py  middleware.py  models.py  serializers.py  storage.py  urls.py  utils.py  views.py  viewsets.py
docker/thumbor/: Dockerfile
docker/web/: Dockerfile
inventory/: admin.py  models.py  signals.py
inventory/api/: serializers.py  urls.py  viewsets.py
inventory/migrations/: 0001_initial.py  0002_productimage_image.py  0003_auto_20201001_1444.py  0004_auto_20201001_1452.py  0005_auto_20201001_1453.py  0006_auto_20201001_1455.py  0007_auto_20201001_1500.py  0008_auto_20201002_2007.py  0009_auto_20201002_2332.py  0010_auto_20201011_0035.py  0011_product_search_keywords.py  0012_auto_20201022_1412.py  0013_auto_20201022_1708.py  0014_kitchen.py  0015_auto_20201022_1756.py  0016_auto_20201028_2321.py  0017_kitchenexample.py  0018_auto_20201028_2333.py  0019_auto_20201028_2334.py  0020_auto_20201028_2346.py  0021_remove_kitchen_search_keywords.py  0022_auto_20201029_0033.py  0023_auto_20201029_1513.py  0024_auto_20201029_1636.py  0025_auto_20201029_1715.py  0026_auto_20201127_1347.py  0027_product_supplier_shipping_cost.py  0028_auto_20201129_1551.py  0029_auto_20201129_1603.py  0030_auto_20201129_1609.py  0031_auto_20201129_1611.py  0032_auto_20201129_1617.py  0033_auto_20201129_1618.py  0034_auto_20210122_1612.py  0035_auto_20210206_1405.py  0036_auto_20210318_1935.py  0037_auto_20210319_1928.py  0038_auto_20210320_1513.py  0039_auto_20210321_1410.py  0040_auto_20210324_2355.py  (+14 more)
inventory/models/: __init__.py  category.py  common.py  kitchen.py  product.py  supplier.py
kitchens/: admin.py  models.py  signals.py
kitchens/api/: serializers.py  urls.py  viewsets.py
kitchens/migrations/: 0001_initial.py  0002_auto_20210324_2355.py  0002_auto_20211117_1832.py  0003_auto_20210325_0001.py  0004_kitchen_apply_filter.py  0005_auto_20211017_1725.py
notes/: admin.py  managers.py  models.py  serializers.py  urls.py  viewsets.py
product_categorization/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
product_categorization/migrations/: 0001_initial.py  0002_auto_20211117_1832.py
products/: admin.py  apps.py  enums.py  models.py  selectors.py  serializers.py  services.py  signals.py  types.py  urls.py  viewsets.py
products/migrations/: 0001_initial.py  0002_auto_20211017_1725.py  0002_auto_20211025_2151.py  0003_auto_20211017_1854.py  0003_auto_20211026_2053.py  0004_auto_20211026_2056.py  0005_auto_20211101_1232.py  0005_auto_20211101_1236.py  0009_auto_20211111_2244.py  0010_auto_20211111_2353.py  0010_auto_20211112_0014.py  0011_auto_20211115_2101.py  0012_auto_20211115_2333.py  (+3 more)
staticfiles/: staticfiles.json
suppliers/: admin.py  models.py
templates/: auth_base.html  auth_layout.html  index.html
users/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  viewsets.py
utils/: admin.py  models.py  pagination.py
(+387 files in other folders)
