[tool.poetry]
name = "aria-api"
version = "0.1.0"
description = ""
authors = ["danielkjellid <daniel.kjellid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
boto3 = "1.14.20"
botocore = "1.17.20"
Django = "^3.2.9"
django-cors-headers = "3.11.0"
django-environ = "0.8.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-imagekit = "4.0.2"
django-mptt = "^0.13.4"
django-s3-storage = "0.13.3"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "5.1.0"
gunicorn = "20.1.0"
ipython = "8.2.0"
jedi = "0.18.0"
pexpect = "4.8.0"
phonenumbers = "8.12.48"
pilkit = "2.0"
prompt-toolkit = "3.0.20"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
Pillow = "^9.1.0"
Pygments = "2.11.2"
PyJWT = "2.3.0"
requests = "2.27.1"
s3transfer = "0.3.3"
sentry-sdk = "^1.5.0"
structlog = "^21.5.0"
uritemplate = "^4.1.1"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
model-bakery = "^1.5.0"
mypy = "0.910"
mypy-extensions = "0.4.3"
pytest-django = "^4.5.2"
pytest-env = "^0.6.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-socket = "^0.5.1"
pytest-mock = "^3.7.0"
pytest-lazy-fixture = "^0.6.3"
pytest-remove-stale-bytecode = "^5.0.1"
pytest-xdist = "^2.5.0"
typing-extensions = "4.2.0"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = 'migrations'
safe = true

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = "*migrations*"
known_django = ["django", "rest_framework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["aria"]
python_files = "test_*.py"
# Reuse the database between tests
addopts = [
    "--reuse-db",
    "--allow-hosts=localhost,::1,127.0.0.1",
]
# Include captured log messages in system-out in CI report file
junit_logging = "system-out"
# --- pytest-django settings
DJANGO_SETTINGS_MODULE = "aria.settings"
# --- pytest-env settings
env = ["ENV_PATH=.env.test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"