[tool.poetry]
name = "aria-api"
version = "0.1.0"
description = ""
authors = ["danielkjellid <daniel.kjellid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
boto3 = "1.14.20"
botocore = "1.17.63"
Django = "4.0.5"
django-cors-headers = "3.13.0"
django-environ = "0.8.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-imagekit = "4.1.0"
django-mptt = "^0.13.4"
django-s3-storage = "0.13.6"
gunicorn = "20.1.0"
ipython = "8.4.0"
jedi = "0.18.1"
pexpect = "4.8.0"
phonenumbers = "8.12.50"
pilkit = "2.0"
prompt-toolkit = "3.0.29"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
Pillow = "^9.1.0"
Pygments = "2.12.0"
PyJWT = "2.4.0"
requests = "2.28.0"
s3transfer = "0.3.7"
sentry-sdk = "^1.5.0"
structlog = "^21.5.0"
uritemplate = "^4.1.1"
whitenoise = "5.2.0"
pydantic = "^1.9.0"
django-ninja = "^0.18.0"
orjson = "^3.7.3"
django-countries = "^7.3.2"
django-redis = "^5.2.0"
dacite = "^1.6.0"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
model-bakery = "^1.5.0"
mypy = "0.950"
mypy-extensions = "0.4.3"
pytest-django = "^4.5.2"
pytest-env = "^0.6.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-socket = "^0.5.1"
pytest-mock = "^3.7.0"
pytest-lazy-fixture = "^0.6.3"
pytest-remove-stale-bytecode = "^5.0.1"
pytest-xdist = "^2.5.0"
typing-extensions = "4.2.0"
django-stubs = "1.11.0"
types-requests = "^2.27.30"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = 'migrations'
safe = true

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = "*migrations*"
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true

[tool.mypy]
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
follow_imports = "normal"

ignore_missing_imports = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

no_implicit_optional = true
no_implicit_reexport = true
check_untyped_defs = true
strict_equality = true

[tool.django-stubs]
django_settings_module = "aria.settings"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# Admin files uses some patterns that are not easily typed
[[tool.mypy.overrides]]
module = "aria.*.admin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aria.conftest"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aria.*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aria.*.migrations.*"
ignore_errors = "true"

[[tool.mypy.overrides]]
module = "aria.*.management.*"
disallow_untyped_defs = false

# Django-stubs currently has a bug where it throws the error
# "error: Name "Optional" is not defined" in files where
# CurrentSiteManager is imported.
#
# The three bellow will be removed as soon as possible.
[[tool.mypy.overrides]]
module = "aria.users.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aria.products.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aria.suppliers.models"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["aria"]
python_files = "test_*.py"
# Reuse the database between tests
addopts = [
    "--reuse-db",
    "--allow-hosts=localhost,::1,127.0.0.1",
]
# Include captured log messages in system-out in CI report file
junit_logging = "system-out"
# --- pytest-django settings
DJANGO_SETTINGS_MODULE = "aria.settings"
# --- pytest-env settings
env = ["ENV_PATH=.env.test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"